--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-/dist
+dist/
 
 # local env files
 .env.local
@@ -19,6 +19,8 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+
 
 # Apache Server File
 *.httaccess
